# hockey-scoreboard

./: .gitignore  CMakeLists.txt  GEMINI.md  README.md  ScoreboardController.cpp  ScoreboardController.h  main.cpp
.github/workflows/: release.yml
display/: ColorLightDisplay.h  DoubleFramebuffer.cpp  DoubleFramebuffer.h  SFMLDisplay.cpp  SFMLDisplay.h
puckpulse-app/: pubspec.yaml
puckpulse-app/android/app/src/main/: AndroidManifest.xml
puckpulse-app/ios/Runner/: Info.plist
puckpulse-app/lib/: discovery_page.dart  main.dart  scoreboard_control_page.dart  scoreboard_model.dart
puckpulse-app/linux/: CMakeLists.txt
puckpulse-app/linux/runner/: my_application.cc
puckpulse-app/test/: widget_test.dart
puckpulse-controller/: CHANGELOG.md  CMakeLists.txt  README.md  ResourceLocator.cpp  ScoreboardState.h  main.cpp  vcpkg.json
puckpulse-controller/data/: Luker.json
puckpulse-controller/display/: SFMLDisplay.cpp
puckpulse-controller/network/: NetworkManager.cpp
puckpulse-controller/packaging/: config  postinst  puckpulse-controller.service  puckpulse-update.service  puckpulse-update.sh  puckpulse-update.timer  templates
scoreboard-app/: pubspec.yaml
scoreboard-app/ios/Runner/: Info.plist
scoreboard-app/ios/Runner.xcodeproj/: project.pbxproj
scoreboard-app/lib/: main.dart  scoreboard_control_page.dart  scoreboard_state.dart  web_socket_service.dart
scoreboard-system/: CMakeLists.txt  GoalCelebrationRenderer.cpp  IRenderer.h  KeyboardControl.cpp  KeyboardControl.h  KeyboardSimulator.cpp  ResourceLocator.cpp  ResourceLocator.h  ScoreboardController.cpp  ScoreboardController.h  ScoreboardRenderer.cpp  ScoreboardState.h  TeamManager.cpp  TeamManager.h  WebSocketManager.cpp  WebSocketManager.h  main.cpp
scoreboard-system/network/: Base64Coder.h  WebSocketManager.cpp  WebSocketManager.cpp.tmp  WebSocketManager.h
scoremaster-app/: pubspec.yaml
scoremaster-app/lib/: discovery_page.dart  discovery_service.dart  main.dart  scoreboard_control_page.dart
scoremaster-app/test/: widget_test.dart
scoremaster-controller/: CHANGELOG.md  CMakeLists.txt  GoalCelebrationRenderer.h  README.md  ResourceLocator.cpp  ScoreboardController.cpp  ScoreboardRenderer.h  main.cpp  vcpkg.json
scoremaster-controller/network/: Base64Coder.cpp  NetworkManager.cpp
scoremaster-controller/packaging/: config  postinst  scoremaster-controller.service  scoremaster-update.sh  templates
